updates to readme file, fixes to css positioning on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -279,8 +279,26 @@ h2 {
     .answer-box:hover {
         background-image: url("../images/clouds.jpg");
     }
+    #score-table {
+        margin-left: 320px;
+    }
 
     
+}
+/* media query for ipad mini screen */
+@media only screen and (width: 768px) and (height: 1024px) {
+ #answers {
+    margin-left: 100px;
+ }   
+ #next-question {
+    margin-left: 240px !important;
+ }
+ #score-table {
+    margin-left: 140px;
+ }
+ #return-btn1 {
+    margin-left: 280px !important;
+ }
 }
 
 /*media query for mobile phones */
